force-app/main/default/objects/SALT_Record__c/SALT_Record__c.object-meta.xml
<CustomObject>
    <description>Custom Object to hold  all purchases made under account records.</description>
    <label>SALT Purchases</label>
    <nameField>
        <label>Salt Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SALT Purchases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>