force-app/main/default/objects/SALT_Record__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>A SALT Record will associated with a account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Salt_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>