force-app/main/default/objects/SALT_Record__c/fields/ItemCode__c.field-meta.xml
<CustomField>
    <fullName>ItemCode__c</fullName>
    <description>Field to uniquely identify the Item</description>
    <label>Item Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>