force-app/main/default/objects/SALT_Record__c/fields/ItemDescription__c.field-meta.xml
<CustomField>
    <fullName>ItemDescription__c</fullName>
    <description>Field contains the description of item</description>
    <label>Item Description</label>
    <type>TextArea</type>
</CustomField>