force-app/main/default/objects/SALT_Record__c/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <description>This field will capture the cost of the product from the SALT Product object and would not change thus restricting the change of Cost in SALT Record even if the price changes for the SALT Product.</description>
    <label>ListPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>