force-app/main/default/objects/SALT_Record__c/fields/OE_Code__c.field-meta.xml
<CustomField>
    <fullName>OE_Code__c</fullName>
    <description>Field to hold the Customer Number(OE Code)</description>
    <label>OE Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>