force-app/main/default/objects/SALT_Record__c/fields/ProductLine__c.field-meta.xml
<CustomField>
    <fullName>ProductLine__c</fullName>
    <inlineHelpText>Field  refers specifically to what you sell</inlineHelpText>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premiums</fullName>
            </value>
            <value>
                <fullName>Printed Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>