force-app/main/default/objects/SALT_Record__c/fields/SALT_Product__c.field-meta.xml
<CustomField>
    <fullName>SALT_Product__c</fullName>
    <label>SALT Product</label>
    <referenceTo>SALT_Product__c</referenceTo>
    <relationshipName>Salt_Records</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>