force-app/main/default/objects/SALT_Record__c/fields/ShipDate__c.field-meta.xml
<CustomField>
    <fullName>ShipDate__c</fullName>
    <description>Field use to hold the shipping date and time.</description>
    <label>Ship Date</label>
    <type>DateTime</type>
</CustomField>