force-app/main/default/objects/SALT_Record__c/fields/ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>ShortDescription__c</fullName>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>